refactor: upgrade to 1.21 and port to Java Fabric/Quilt