@@ -1,9 +1,10 @@
 @file:Suppress("UnstableApiUsage")
 
+import nl.javadude.gradle.plugins.license.License
+
 plugins {
-	id("org.jetbrains.kotlin.jvm").version("1.8.10")
-	id("org.quiltmc.quilt-mappings-on-loom") version "4.2.1"
-	id("org.quiltmc.loom") version "1.1.+"
+	id("com.github.hierynomus.license").version("0.16.1")
+	alias(libs.plugins.quilt.loom)
 	`maven-publish`
 }
 
@@ -11,7 +12,7 @@ val modVersion: String by project
 val mavenGroup: String by project
 val modId: String by project
 
-base.archivesBaseName = modId
+base.archivesName = modId
 version = modVersion
 group = mavenGroup
 
@@ -21,6 +22,25 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	
+	mavenCentral()
+	
+	maven {
+		name = "ParchmentMC"
+		url = uri("https://maven.parchmentmc.org")
+	}
+	
+	// Mod Artifacts
+	
+	maven {
+		name = "WTHIT Maven"
+		url = uri("https://maven2.bai.lol")
+		content {
+			includeGroup("lol.bai")
+			includeGroup("mcp.mobius.waila")
+		}
+	}
+	
 	maven {
 		name = "TerraformersMC"
 		url = uri("https://maven.terraformersmc.com/")
@@ -33,99 +53,57 @@ repositories {
 			includeGroup("maven.modrinth")
 		}
 	}
-	
-	maven {
-		name = "auoeke Maven"
-		url = uri("https://maven.auoeke.net")
-	}
-	
-	maven {
-		url = uri("https://maven.bai.lol")
-	}
-	
-	maven {
-		name = "Cursed Maven"
-		url = uri("https://cursemaven.com")
-		content {
-			includeGroup("curse.maven")
-		}
-	}
-	
-	maven {
-		url = uri("https://repo.minelittlepony-mod.com/maven/release")
-	}
-	
-	maven {
-		name = "Gegy"
-		url = uri("https://maven.gegy.dev")
-	}
-	
-	maven {
-		url = uri("https://nexus.velocitypowered.com/repository/maven-public/")
-	}
-	
-	maven {
-		name = "QuiltMC Snapshot"
-		url = uri("https://maven.quiltmc.org/repository/snapshot")
-	}
-	
-	maven {
-		url = uri("https://maven.ryanliptak.com/")
-	}
 }
-
 
 val modImplementationInclude by configurations.register("modImplementationInclude")
-
-configurations {
-	modImplementationInclude
-}
 
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
 // See https://docs.gradle.org/current/userguide/platforms.html for information on how version catalogs work.
 dependencies {
 	minecraft(libs.minecraft)
 	mappings(loom.layered {
-		mappings("org.quiltmc:quilt-mappings:${libs.versions.minecraft.get()}+build.${libs.versions.quilt.mappings.get()}:intermediary-v2")
+		officialMojangMappings()
+		parchment(libs.parchment)
 	})
-	modImplementation(libs.quilt.loader)
-	modImplementation(libs.quilt.lang.kotlin)
 	
-	// QSL is not a complete API; You will need Quilted Fabric API to fill in the gaps.
-	// Quilted Fabric API will automatically pull in the correct QSL version.
-	modImplementation(libs.quilted.fabric.api)
-	// modImplementation libs.bundles.quilted.fabric.api // If you wish to use Fabric API's deprecated modules, you can replace the above line with this one
+	// Loader
+	modImplementation(libs.fabric.loader)
 	
-//	modImplementationInclude(libs.core.qsl.base)
-//	modImplementationInclude(libs.core.networking)
-//	modImplementationInclude(libs.core.registry)
-//
-//	modImplementationInclude(libs.block.entity)
-//	modImplementationInclude(libs.block.extensions)
-//
-//	modImplementationInclude(libs.item.group)
-//	modImplementationInclude(libs.item.setting)
+	// Libraries
+	modImplementation(libs.fabric.api)
 	
-	// cursed library collection
-//	implementation(include("net.auoeke", "reflect", "5.+"))
-//	implementation(include("net.gudenau.lib", "unsafe", "latest.release"))
-//	implementation(include("org.objenesis", "objenesis", "3.3"))
+	// Mod Integrations
+	modCompileOnly(libs.wthit)
+	modCompileOnly(libs.wthit.api)
+	modCompileOnly(libs.lucko.fabric.permissions) {
+		exclude(group = "net.fabricmc.fabric-api")
+		exclude(group = "net.fabricmc")
+	}
 	
-	// more cursed libraries
-//	implementation("net.bytebuddy", "byte-buddy-agent", "1.12.+")
-//	modImplementation("maven.modrinth", "yqh", "0.1.2")
-	
-	// must-have libraries
-	modCompileOnly("mcp.mobius.waila", "wthit-api", "quilt-5.13.4")
-	
-//	add(sourceSets.main.get().getTaskName("mod", JavaPlugin.IMPLEMENTATION_CONFIGURATION_NAME), modImplementationInclude)
-//	add(net.fabricmc.loom.util.Constants.Configurations.INCLUDE, modImplementationInclude)
+	modRuntimeOnly(libs.wthit)
+	modRuntimeOnly(libs.modmenu) {
+		exclude(group = "net.fabricmc.fabric-api")
+		exclude(group = "net.fabricmc")
+	}
+	modRuntimeOnly(libs.luckperms)
+	modRuntimeOnly(libs.lucko.fabric.permissions) {
+		exclude(group = "net.fabricmc.fabric-api")
+		exclude(group = "net.fabricmc")
+	}
+	modRuntimeOnly(libs.resource.explorer)
+}
+
+configurations {
+	runtimeClasspath {
+		// remove duplicate fabric-loader
+		exclude(group = "net.fabricmc", module = "fabric-loader")
+	}
 }
 
 tasks.processResources {
 	inputs.property("version", version)
 	
-	filesMatching("quilt.mod.json") {
+	filesMatching("fabric.mod.json") {
 		expand("group" to mavenGroup, "id" to modId, "version" to version)
 	}
 	
@@ -136,34 +114,61 @@ tasks.processResources {
 
 tasks.withType<JavaCompile> {
 	options.encoding = "UTF-8"
-	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-	options.release.set(17)
+	// Minecraft 1.21 upwards uses Java 21.
+	options.release.set(21)
+	options.compilerArgs.add("--enable-preview")
+}
+
+loom {
+	accessWidenerPath.set(file("src/main/resources/$modId.accesswidener"))
+}
+
+fabricApi {
+	configureDataGeneration()
 }
 
 java {
 	// Still required by IDEs such as Eclipse and Visual Studio Code
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_22
+	targetCompatibility = JavaVersion.VERSION_21
 	
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task if it is present.
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 	
-	// If this mod is going to be a library, then it should also generate Javadocs in order to aid with developement.
+	// If this mod is going to be a library, then it should also generate Javadocs in order to aid with development.
 	// Uncomment this line to generate them.
 	// withJavadocJar()
 }
 
 // If you plan to use a different file for the license, don't forget to change the file name here!
 tasks.withType<AbstractArchiveTask> {
-	from("LICENSE") {
+	from("COPYING") {
+		rename { "${it}_${modId}" }
+	}
+	
+	from("COPYING.LESSER") {
 		rename { "${it}_${modId}" }
 	}
 }
 
+tasks.license.configure {
+	mustRunAfter(tasks.licenseFormat)
+}
+
+tasks.build {
+	dependsOn(tasks.licenseFormat)
+	dependsOn(tasks.license)
+}
+
+tasks.withType<License> {
+	header = file("LHEADER")
+	exclude("**/*.json")
+}
+
 // Configure the maven publication
 publishing {
-	publications {}
+	publications { }
 	
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
